--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <title>Ledoo</title>
+    <title>MiniBook</title>
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- Tab Icon -->
@@ -52,7 +52,7 @@
 
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade">
-                    <img src="../MiniBook/images/books/astudent.jpg">
+                    <img src="images/books/astudent.jpg">
                     <div class="book-info">
                         <div class="title">How to become a straight-A student</div>
                         <div class="rating-genre">Cal Newport&nbsp;&nbsp;&nbsp; Rating: 69/10</div>
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="mySlides fade">
-                    <img src="../MiniBook/images/books/24hours.jpg">
+                    <img src="images/books/24hours.jpg">
                     <div class="book-info">
                         <div class="title">How to live on 24 hours a day</div>
                         <div class="rating-genre">Arnold Bennett&nbsp;&nbsp;&nbsp; Rating: 69/10</div>
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="mySlides fade">
-                    <img src="../MiniBook/images/books/ard.jpg">
+                    <img src="images/books/ard.jpg">
                     <div class="book-info">
                         <div class="title">Ard El-Safeleen</div>
                         <div class="rating-genre">Ahmed Khalid Mostafa&nbsp;&nbsp;&nbsp; Rating: 69/10</div>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="mySlides fade">
-                    <img src="../MiniBook/images/books/alchemist.jpg">
+                    <img src="images/books/alchemist.jpg">
                     <div class="book-info">
                         <div class="title">The Alchemist</div>
                         <div class="rating-genre">Paulo Coelho&nbsp;&nbsp;&nbsp; Rating: 69/10</div>
