--- a/html/about.html
+++ b/html/about.html
@@ -24,7 +24,7 @@
         <ul class="nav-links">
             <li><a href="../index.html">Home</a></li>
             <li><a href="summaries.html">Summaries</a></li>
-            <li><a href="About.html" style="color: #e85a4f;">About</a></li>
+            <li><a href="about.html" style="color: #e85a4f;">About</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
@@ -63,7 +63,7 @@
         <div class="Fline2">
             <div>
                 <span>Contact Us<br></span>
-                Minibook@gmail.com
+                <a href="mailto:Minibook.Egypt@gmail.com" class="mail">Minibook.Egypt@gmail.com</a>
             </div>
             <hr>
         </div>
