--- a/html/book-summary.html
+++ b/html/book-summary.html
@@ -26,7 +26,7 @@
         <ul class="nav-links">
             <li><a href="../index.html">Home</a></li>
             <li><a href="summaries.html">Summaries</a></li>
-            <li><a href="About.html">About</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
