--- a/html/summaries.html
+++ b/html/summaries.html
@@ -30,7 +30,7 @@
         <ul class="nav-links">
             <li><a href="../index.html">Home</a></li>
             <li><a href="summaries.html" style="color: #e85a4f;">Summaries</a></li>
-            <li><a href="About.html">About</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
