--- a/html/about.html
+++ b/html/about.html
@@ -54,19 +54,17 @@
     </div>
 
     <!--Footer-->
-    <div class="footer">
-        <div class="Fline1">
-            <div>
-            </div>
-            <hr>
-        </div>
-        <div class="Fline2">
+    <div class="footer" style="  grid-template-columns: 25% 50% 25%;">
+        <div class="Fline1"></div>
+        <div class="Fline2" style="width:100%;text-align:center;">
             <div>
                 <span>Contact Us<br></span>
                 <a href="mailto:Minibook.Egypt@gmail.com" class="mail">Minibook.Egypt@gmail.com</a>
             </div>
             <hr>
         </div>
+        <div class="Fline1"></div>
+
 
     </div>
     <div class="copyrights">© 2022 All Rights reserved | MiniBook</div>
