--- a/html/book-summary.html
+++ b/html/book-summary.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <title>Ledoo</title>
+    <title>MiniBook</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../css/styles.css">
     <!-- Tab Icon -->
@@ -72,7 +72,7 @@
         <div class="Fline2">
             <div>
                 <span>Contact Us<br></span>
-                Minibook@gmail.com
+                <a href="mailto:Minibook.Egypt@gmail.com" class="mail">Minibook.Egypt@gmail.com</a>
             </div>
             <hr>
         </div>
