--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="Fline2">
             <div>
                 <span>Contact Us<br></span>
-                Minibook@gmail.com
+                <a href="mailto:Minibook.Egypt@gmail.com" class="mail">Minibook.Egypt@gmail.com</a>
             </div>
             <hr>
         </div>
