--- a/html/summaries.html
+++ b/html/summaries.html
@@ -51,7 +51,6 @@
                 </div>
                 <div class="content">
                     <h2 class="Book__title">How to become a straight-A student</h2>
-                    <div class="rating">10</div>
                     <p class="overview">
                         From living their whole life in between the library shelves to sleeping three hours daily, there
                         is a good deal of myths about straight-A students. Cal Newport wrote this book by interviewing
@@ -76,7 +75,6 @@
                 </div>
                 <div class="content">
                     <h2 class="Book__title">How to live on 24 hours a day</h2>
-                    <div class="rating">10</div>
                     <p class="overview">
                         Arnold Bennett is discussing how to get out of your daily loop. He thinks that time is a miracle
                         that cannot be replaced by something else. <i>“Time can often produce money, but money cannot
@@ -98,7 +96,6 @@
                 </div>
                 <div class="content">
                     <h2 class="Book__title">Ard El-Safeleen</h2>
-                    <div class="rating">10</div>
                     <p class="overview">
                         ” All the laws and masks of this place have been shattered. This is the land where you will
                         betray your wife, sell your country, and reject your God... and not care. You're now little more
@@ -120,7 +117,6 @@
                 </div>
                 <div class="content">
                     <h2 class="Book__title">The Alchemist</h2>
-                    <div class="rating">10</div>
                     <p class="overview">
                         The story features a young Spanish shepherd called Santiago who once had a dream about
                         discovering a hidden treasure beneath the Egyptian pyramids while he was sleeping next to an old
@@ -130,6 +126,49 @@
                     <hr>
                     <div class="view">
                         <a href="book-summary.html" id="alchemist" class="anchors">View Book Summary &#10095;</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="Box_con">
+            <div class="Box">
+                <div class="img_con">
+                    <img src="../images/books/get.jpg" class="book__image">
+                </div>
+                <div class="content">
+                    <h2 class="Book__title">Now I Get It</h2>
+                    <p class="overview">
+                        This book contains 13 short stories, with two things in common. The first one is that the
+                        narrator always dies at the end, and the second thing is that neither you nor the narrator
+                        understand anything until the last moment. When the last moment hits, the fog will fade away,
+                        and only then you will understand.
+                    </p>
+                    <hr>
+                    <div class="view">
+                        <a href="book-summary.html" id="get" class="anchors">View Book Summary &#10095;</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="Box_con">
+            <div class="Box">
+                <div class="img_con">
+                    <img src="../images/books/barb.jpg" class="book__image">
+                </div>
+                <div class="content">
+                    <h2 class="Book__title">101 Barbarossa Puzzle</h2>
+                    <p class="overview">
+                        101 the puzzle of Barbarossa is one of the most popular Arabic books because it combines amazing
+                        new facts about history with thrilling drama and exciting adventures. It is a one-of-a-kind
+                        combo that is difficult to come across in other Arabic novels. In this tale, we meet Nedal, a
+                        young Palestinian man living in London after the death of his two parents and his aunt Khadija,
+                        alongside his Moroccan companion, Abdelaziz.
+                    </p>
+                    <hr>
+                    <div class="view">
+                        <a href="book-summary.html" id="barb" class="anchors">View Book Summary &#10095;</a>
                     </div>
                 </div>
             </div>
