--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <img src="images/books/astudent.jpg">
                     <div class="book-info">
                         <div class="title">How to become a straight-A student</div>
-                        <div class="rating-genre">Cal Newport&nbsp;&nbsp;&nbsp; Rating: 69/10</div>
+                        <div class="author">Cal Newport</div>
                         <div class="dis">From living their whole life in between the library shelves to sleeping three
                             hours daily, there is a good deal of myths about straight-A students. Cal Newport wrote this
                             book by interviewing some straight-A students in elite universities to let us know their
@@ -68,7 +68,7 @@
                     <img src="images/books/24hours.jpg">
                     <div class="book-info">
                         <div class="title">How to live on 24 hours a day</div>
-                        <div class="rating-genre">Arnold Bennett&nbsp;&nbsp;&nbsp; Rating: 69/10</div>
+                        <div class="author">Arnold Bennett</div>
                         <div class="dis">Arnold Bennett is discussing how to get out of your daily loop. He thinks that
                             time is a miracle that cannot be replaced by something else. <i>“Time can often produce
                                 money, but money cannot produce more time, time is extremely limited”</i>.</div>
@@ -80,7 +80,7 @@
                     <img src="images/books/ard.jpg">
                     <div class="book-info">
                         <div class="title">Ard El-Safeleen</div>
-                        <div class="rating-genre">Ahmed Khalid Mostafa&nbsp;&nbsp;&nbsp; Rating: 69/10</div>
+                        <div class="author">Ahmed Khalid Mostafa</div>
                         <div class="dis">” All the laws and masks of this place have been shattered. This is the land
                             where you will betray your wife, sell your country, and reject your God... and not care.
                             You're now little more than a varmint.”</div>
@@ -92,7 +92,7 @@
                     <img src="images/books/alchemist.jpg">
                     <div class="book-info">
                         <div class="title">The Alchemist</div>
-                        <div class="rating-genre">Paulo Coelho&nbsp;&nbsp;&nbsp; Rating: 69/10</div>
+                        <div class="author">Paulo Coelho</div>
                         <div class="dis">The story features a young Spanish shepherd called Santiago who once had a
                             dream about discovering a hidden treasure beneath the Egyptian pyramids while he was
                             sleeping next to an old church. At first, he ignored the dream but the dream kept visiting
